    - Towns now store their Nation, and Nations do not store their Towns.
    - Towny now handles loading a mayor for a town intelligently.
      - If a town attempts to set a mayor who is not part of the town, and the
        town has no residents, the town will be deleted.
      - Closes #4170.
    - Towny now handles loading the capital of a nation intelligently.
  - Little fixes for TownySQLSource:
    - Hit TownySQLSource with the formatting stick.
    - Add tar/tar.gz backups to the backup code.
    - Make deletePlotGroup actually do something.
  - Invite Cleanup, courtesy of Siris with PR #4269.
  - Cleanup Confirmation class and properly implement async, courtesy of Siris with PR #4280.
  - Remove Secondary POM file, courtesy of TheFlagCourier with PR #4278.
0.96.2.13:
  - Fix NPE caused by trying to delete an economy account before the EconomyHandler is set up.
  - On flatfile databases, move resident file into deleted folder instead of outright deleting them.
  - Fix Towny deleting residents that do not load proper data.
    - This was probably overly heavy-handed, usually happening when a resident loaded a town that didn't exist.
    - Now resident will load with no town, if they have saved an invalid Town.
    - Removed spammy debug messages from TownySQLSource.
  - Hotfix/Delay backup until after initialization, courtesy of Siris with PR #4281.
  - Readd TownyMessaging.sendMsg(Object, String) deprecated.
  - Fix Towny deleting resident that do not load proper data on sql databases.
  - Fix Towny still trying to load a nation's town list on SQL servers.
0.96.2.14:
  - Fix /t list throwing an error on spigot servers when the economyhandler is not active.
    - Sometimes caused by having vault without any economy plugin present.
    - Closes #4284.
  - Made TownySettings.isUsingEconomy also require that the TownyEconomyHandler.isActive(), to more easily handle when a server has not had their economy properly set up.